# FIFS_dream11

./: .gitignore  README.md  main_app.py  pyproject.toml  req.txt  test.txt  testing.ipynb
Charan_A1/: create_structure.sh
src/: hack-et_keepers_output.csv  reinforced_strikers_output.csv  requirements.txt  test.csv  train_test.sh  train_test_charan.sh  yorker_yodas_output.csv
src/UI/: Model_UI.py
src/data_processing/: data_analysis.ipynb  data_download.py  data_proccess_shiva.ipynb  data_proccess_shiva_charan.ipynb  data_process.sh  data_processing.py  data_processing_gunjit.py  data_processing_old.py  data_statictics.txt  data_update.py  eda_and_feature_selection copy.ipynb  eda_and_feature_selection.ipynb  feature_engineering.py  feature_engineering_1.py  feature_engineering_charan.py  final_classified.csv  left_joined_players.csv  link_extractor.ipynb  load_data_charan.py  match_statistics.ipynb  output.csv  pitch_data.json  pitch_data2.json  player_classification.ipynb  player_info_scraping.ipynb
src/experiments/: explain.ipynb  feature_utils.py  nodegam_explainability.ipynb  ray_tune.py  regressor_models.ipynb  train_OD_nodegam.py  train_T20_nodegam.py  train_test_nodegam.py
src/lgbm_fixed_output/: lgbm_k10_feature_names.pkl  lgbm_k7_feature_names.pkl
src/lgbm_fixed_output_1/: lgbm_k10_feature_names.pkl
src/lgbm_fixed_output_2/: lgbm_k10_feature_names.pkl
src/mlp_fixed_output/: mlp_k10_final_model.pth  mlp_k10_scalers.pkl  mlp_k7_final_model.pth  mlp_k7_scalers.pkl
src/model/: data_exploration.ipynb  dream11_team_mlp.csv  ensemble_final.py  (+37 more)
(+187 files in other folders)
