[project]
name = "fifs-dream11"
version = "0.1.0"
description = ""
authors = [
    {name = "Hack-et Keepers group",email = "ai21btech11012@iith.ac.in"}
]
readme = "README.md"
requires-python = "3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
